// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> should have some hintText 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <input
      autocomplete="off"
      class="input"
      id="id"
      type="text"
      value=""
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
  <p
    class="root sizeScale2 hintText"
  >
    hint text
  </p>
</div>
`;

exports[`<TextInput /> should match snapshot 1`] = `
<div
  class="root"
>
  <div
    class="notchedBase"
  >
    <input
      autocomplete="off"
      class="input"
      id="id"
      type="text"
      value=""
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when active 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase notchedBaseShift notchedBaseActive"
  >
    <input
      autocomplete="off"
      class="input"
      type="text"
      value="value from the tests"
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 16px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when touched 1`] = `
<div
  class="root input-class"
>
  <div
    class="notchedBase"
  >
    <input
      autocomplete="off"
      class="input"
      type="text"
      value=""
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="root input-class invalid withStatus"
>
  <div
    class="notchedBase"
  >
    <input
      autocomplete="off"
      class="input"
      type="text"
      value=""
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;

exports[`<TextInput /> should match snapshot when touched and valid 1`] = `
<div
  class="root input-class valid withStatus"
>
  <div
    class="notchedBase"
  >
    <input
      autocomplete="off"
      class="input"
      type="text"
      value=""
    />
    <div
      class="notchedBaseBorder"
    >
      <div
        class="notchedBaseBorderLeading"
      />
      <div
        class="notchedBaseBorderNotch"
        style="width: 0px;"
      >
        <label
          class="notchedBasePlaceholder"
        >
          placeholder something
        </label>
      </div>
      <div
        class="notchedBaseBorderTrailing"
      />
    </div>
  </div>
</div>
`;
